--- a/index.html
+++ b/index.html
@@ -8,35 +8,52 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;0,700;1,100&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>CFOP Trainer</title>
+        <link rel="icon" href="https://i.pinimg.com/originals/e9/ea/11/e9ea1149359a3d087f5bd946372ab840.png">
+        <script defer src="code.js"></script>
     </head>
     <body>
-        <section class="header">
+        <header class="header">
             <nav>
                 <a href="index.html"><img src="images/cfopLogo.png"></a>
                 <div class="nav-links">
                     <ul class="navigation">
                         <li><a href="index.html">HOME</a></li>
+                        <li><a href="CFOP.html">CFOP</a></li>
                         <li><a href="F2L.html">F2L</a></li>
                         <li><a href="OLL.html">OLL</a></li>
                         <li><a href="PLL.html">PLL</a></li>
                     </ul> 
                 </div>
             </nav>
-        </section>
+        </header>
         <main>
             <div class="title">
                 <div class="homeTitle">
                     <h1>Welcome to CFOP Trainer</h1>
-                    <p>Learning CFOP just got easier</p>
+                    <p>Learning CFOP has never been easier</p>
+                    <a href="CFOP.html" class="learn-btn">Learn About CFOP</a>
                 </div>
             </div>
             <div class="infoHome">
-                <h2>What is CFOP Trainer?</h2>
-                <p>
-                    CFOP Trainer is an advanced tool that is used to practice CFOP algorithms efficiently. CFOP Trainer simplifies the memorizing process and allows you to easily recognize patterns to perform the correct CFOP algorithm.
-                </p>
+                <div>
+                    <p>
+                        Choose specific algorithms to suit your needs and build a personalized practice environment.
+                    </p>
+                </div>
+                <img src="images/cubeTransition.jpg" class="infoImg">
             </div>
         </main>
+        <footer class="footer">
+            <h4>Check Our Social Media!</h4>
+            <div class="icons">
+                <i class="fa fa-facebook"></i>
+                <i class="fa fa-twitter"></i>
+                <i class="fa fa-instagram"></i>
+                <i class="fa fa-linkedin"></i>
+            </div>
+            <a href="https://noahtylee.github.io/" target=”_blank”>Find More Here</a>
+        </footer>
     </body>
 </html>
