--- a/F2L.html
+++ b/F2L.html
@@ -8,7 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;0,700;1,100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>CFOP Trainer</title>
+    <link rel="icon" href="https://i.pinimg.com/originals/e9/ea/11/e9ea1149359a3d087f5bd946372ab840.png">
+    <script defer src="F2L.js"></script>
 </head>
 <body>
     <section class="header">
@@ -17,6 +20,7 @@
             <div class="nav-links">
                 <ul class="navigation">
                     <li><a href="index.html">HOME</a></li>
+                    <li><a href="CFOP.html">CFOP</a></li>
                     <li><a href="F2L.html">F2L</a></li>
                     <li><a href="OLL.html">OLL</a></li>
                     <li><a href="PLL.html">PLL</a></li>
@@ -25,40 +29,191 @@
         </nav>
     </section>
     <main>
-        <div class="info">
-            <h2 class="heading">What is CFOP?</h2>
-            <p class="body">
-                CFOP is an advanced cubing method that utilizes over a hundred different algorithms to optimize solving speed. Used by many professional cubers, CFOP has proven to be one of the fastest methods that is highly recommended to speed cubers.
-            </p>
+        <div class="f2lHeading">
+            <h1>F2L</h1>
+            <hr>
         </div>
-        <div class="steps">
-            <h2 class="heading">What makes up CFOP?</h2>
-            <p class="body">CFOP consists of four different stages.</p>
-            <div class="cross">
-                <h3 class="stepHeading">Cross</h3>
-                <p class="body">
-                    The cross involves forming a "plus" shape on a single side, focusing on aligning the edges of the first side. This stage should normally be solved in around 8 moves, but can be completed more efficiently with proper inspection.
-                </p>
+        <section class="f2lPanels">
+            <div class="leftPanelF2l">
+                <button data-modal-target="#cases-1" class="casesF2l">
+                    <h3 class="casesHeading">Select Cases</h3>
+                </button>
+                <div class="cases" id="cases-1">
+                    <div class="casesHeader">
+                        <div class="casesTitle">Select Desired F2L Cases</div>
+                        <button data-close-button class="casesClose">&times;</button>
+                    </div>
+                    <div class="casesContent">
+                        <input type="checkbox" id="caseF2l1" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l1" class="caseSelectF2l"><img src="images/casef2l1.png" /></label>
+                        <input type="checkbox" id="caseF2l2" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l2" class="caseSelectF2l"><img src="images/casef2l2.png" /></label>
+                        <input type="checkbox" id="caseF2l3" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l3" class="caseSelectF2l"><img src="images/casef2l3.png" /></label>
+                        <input type="checkbox" id="caseF2l4" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l4" class="caseSelectF2l"><img src="images/casef2l4.png" /></label>
+                        <input type="checkbox" id="caseF2l5" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l5" class="caseSelectF2l"><img src="images/casef2l5.png" /></label>
+                        <input type="checkbox" id="caseF2l6" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l6" class="caseSelectF2l"><img src="images/casef2l6.png" /></label>
+                        <input type="checkbox" id="caseF2l7" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l7" class="caseSelectF2l"><img src="images/casef2l7.png" /></label>
+                        <input type="checkbox" id="caseF2l8" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l8" class="caseSelectF2l"><img src="images/casef2l8.png" /></label>
+                        <input type="checkbox" id="caseF2l9" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l9" class="caseSelectF2l"><img src="images/casef2l9.png" /></label>
+                        <input type="checkbox" id="caseF2l10" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l10" class="caseSelectF2l"><img src="images/casef2l10.png" /></label>
+                        <input type="checkbox" id="caseF2l11" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l11" class="caseSelectF2l"><img src="images/casef2l11.png" /></label>
+                        <input type="checkbox" id="caseF2l12" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l12" class="caseSelectF2l"><img src="images/casef2l12.png" /></label>
+                        <input type="checkbox" id="caseF2l13" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l13" class="caseSelectF2l"><img src="images/casef2l13.png" /></label>
+                        <input type="checkbox" id="caseF2l14" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l14" class="caseSelectF2l"><img src="images/casef2l14.png" /></label>
+                        <input type="checkbox" id="caseF2l15" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l15" class="caseSelectF2l"><img src="images/casef2l15.png" /></label>
+                        <input type="checkbox" id="caseF2l16" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l16" class="caseSelectF2l"><img src="images/casef2l16.png" /></label>
+                        <input type="checkbox" id="caseF2l17" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l17" class="caseSelectF2l"><img src="images/casef2l17.png" /></label>
+                        <input type="checkbox" id="caseF2l18" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l18" class="caseSelectF2l"><img src="images/casef2l18.png" /></label>
+                        <input type="checkbox" id="caseF2l19" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l19" class="caseSelectF2l"><img src="images/casef2l19.png" /></label>
+                        <input type="checkbox" id="caseF2l20" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l20" class="caseSelectF2l"><img src="images/casef2l20.png" /></label>
+                        <input type="checkbox" id="caseF2l21" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l21" class="caseSelectF2l"><img src="images/casef2l21.png" /></label>
+                        <input type="checkbox" id="caseF2l22" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l22" class="caseSelectF2l"><img src="images/casef2l22.png" /></label>
+                        <input type="checkbox" id="caseF2l23" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l23" class="caseSelectF2l"><img src="images/casef2l23.png" /></label>
+                        <input type="checkbox" id="caseF2l24" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l24" class="caseSelectF2l"><img src="images/casef2l24.png" /></label>
+                        <input type="checkbox" id="caseF2l25" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l25" class="caseSelectF2l"><img src="images/casef2l25.png" /></label>
+                        <input type="checkbox" id="caseF2l26" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l26" class="caseSelectF2l"><img src="images/casef2l26.png" /></label>
+                        <input type="checkbox" id="caseF2l27" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l27" class="caseSelectF2l"><img src="images/casef2l27.png" /></label>
+                        <input type="checkbox" id="caseF2l28" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l28" class="caseSelectF2l"><img src="images/casef2l28.png" /></label>
+                        <input type="checkbox" id="caseF2l29" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l29" class="caseSelectF2l"><img src="images/casef2l29.png" /></label>
+                        <input type="checkbox" id="caseF2l30" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l30" class="caseSelectF2l"><img src="images/casef2l30.png" /></label>
+                        <input type="checkbox" id="caseF2l31" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l31" class="caseSelectF2l"><img src="images/casef2l31.png" /></label>
+                        <input type="checkbox" id="caseF2l32" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l32" class="caseSelectF2l"><img src="images/casef2l32.png" /></label>
+                        <input type="checkbox" id="caseF2l33" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l33" class="caseSelectF2l"><img src="images/casef2l33.png" /></label>
+                        <input type="checkbox" id="caseF2l34" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l34" class="caseSelectF2l"><img src="images/casef2l34.png" /></label>
+                        <input type="checkbox" id="caseF2l35" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l35" class="caseSelectF2l"><img src="images/casef2l35.png" /></label>
+                        <input type="checkbox" id="caseF2l36" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l36" class="caseSelectF2l"><img src="images/casef2l36.png" /></label>
+                        <input type="checkbox" id="caseF2l37" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l37" class="caseSelectF2l"><img src="images/casef2l37.png" /></label>
+                        <input type="checkbox" id="caseF2l38" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l38" class="caseSelectF2l"><img src="images/casef2l38.png" /></label>
+                        <input type="checkbox" id="caseF2l39" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l39" class="caseSelectF2l"><img src="images/casef2l39.png" /></label>
+                        <input type="checkbox" id="caseF2l40" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l40" class="caseSelectF2l"><img src="images/casef2l40.png" /></label>
+                        <input type="checkbox" id="caseF2l41" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l41" class="caseSelectF2l"><img src="images/casef2l41.png" /></label>
+                        <input type="checkbox" id="caseF2l42" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l42" class="caseSelectF2l"><img src="images/casef2l42.png" /></label>
+                        <input type="checkbox" id="caseF2l43" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l43" class="caseSelectF2l"><img src="images/casef2l43.png" /></label>
+                        <input type="checkbox" id="caseF2l44" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l44" class="caseSelectF2l"><img src="images/casef2l44.png" /></label>
+                        <input type="checkbox" id="caseF2l45" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l45" class="caseSelectF2l"><img src="images/casef2l45.png" /></label>
+                        <input type="checkbox" id="caseF2l46" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l46" class="caseSelectF2l"><img src="images/casef2l46.png" /></label>
+                        <input type="checkbox" id="caseF2l47" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l47" class="caseSelectF2l"><img src="images/casef2l47.png" /></label>
+                        <input type="checkbox" id="caseF2l48" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l48" class="caseSelectF2l"><img src="images/casef2l48.png" /></label>
+                        <input type="checkbox" id="caseF2l49" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l49" class="caseSelectF2l"><img src="images/casef2l49.png" /></label>
+                        <input type="checkbox" id="caseF2l50" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l50" class="caseSelectF2l"><img src="images/casef2l50.png" /></label>
+                        <input type="checkbox" id="caseF2l51" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l51" class="caseSelectF2l"><img src="images/casef2l51.png" /></label>
+                        <input type="checkbox" id="caseF2l52" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l52" class="caseSelectF2l"><img src="images/casef2l52.png" /></label>
+                        <input type="checkbox" id="caseF2l53" class="casesDisplay" name="casesChosen"/>
+                        <label for="caseF2l53" class="caseSelectF2l"><img src="images/casef2l53.png" /></label>
+                    </div>
+                </div>
+                <br>
+                <input type="checkbox" id="randomizeF2l" onkeyup="event.preventDefault()">
+                <label for="randomizeF2l" class="options"><h2>Randomize</h2></label>
+                <br>
+                <input type="checkbox" id="showSolutionsF2l" onclick="showSolution()" onkeyup="event.preventDefault()">
+                <label for="showSolutionsF2l" class="options"><h2>Solutions</h2></label>
+                <br>
+                <input type="checkbox" id="nextCaseF2l" onclick="changeNextCase()" onkeyup="event.preventDefault()">
+                <label for="nextCaseF2l" class="options"><h2>Next Case After Solve</h2></label>
             </div>
-            <div class="f2l">
-                <h3 class="stepHeading">F2L</h3>
-                <p class="body">
-                    F2L focuses on solving the corners of the first side, while simultaneously aligning the second layer edges. This stage can be difficult to tackle at first, but can be solved intuitively without algorithms. However, advanced F2L algorithms are useful to further maximize efficiency.
-                </p>
+            <div class="centerPanelF2l">
+                <h1 id="tempCentral">Press the "Select Cases" button to begin</h1>
+                <div id="centralDisplay">
+                    <h2 id="scramble">Scramble: F' U2 L' U' L2 F L'</h2>
+                    <img src="images/f2lCubeTest.PNG" id="mainImage">
+                    <div class="timerPosition">
+                        <div></div>
+                        <div class="timerF2l">
+                            <p id="min">00</p>
+                            <p id="colon">:</p>
+                            <p id="sec">00</p>
+                            <p id="colon1">:</p>
+                            <p id="mil">00</p>
+                        </div>
+                        <div></div>
+                    </div>
+                    <button id="nextCase" onclick="moveNextCase()" onkeyup="event.preventDefault()">Next Case</button>
+                    <p id="solutionsF2l">Solution: y U (L' U L) U' (L' U' L)</p>
+                </div>
             </div>
-            <div class="oll">
-                <h3 class="stepHeading">OLL</h3>
-                <p class="body">
-                    OLL involves 57 unique algorithms that are used to complete the top color of the third layer. Despite having 57 different algorithms, each solve will only require the use of one, depending on the position of the cube.
-                </p>
+            <div class="rightPanelF2l">
+                <button data-modal-target-stats="#stats-1" id="statsF2l">
+                    <h3 class="statsHeading">Stats</h3>
+                </button>
+                <div class="stats" id="stats-1">
+                    <div class="statsHeader">
+                        <div class="statsTitle">Statistics</div>
+                        <button data-close-button-stats class="statsClose">&times;</button>
+                    </div>
+                    <div class="statsContent">
+                        <div id="statsRow1">
+                            <p id="best">Best: 00:00:00</p>
+                            <p id="worst">Worst: 00:00:00</p>
+                            <p id="average">Average: 00:00:00</p>
+                            <p id="median">Median: 00:00:00</p>
+                            <p id="sDeviation">Standard Deviation: 00:00:00</p>
+                        </div>
+                        <div id="statsRow2">
+                            <p id="fiveAverage">Average of Last 5: 00:00:00</p>
+                            <p id="threeOfFive">Median Three of Five: 00:00:00</p>
+                            <p id="bestThree">Best Three of Five: 00:00:00</p>
+                        </div>
+                    </div>
+                </div>
+                <!--<button id="statsF2l">Stats</button>-->
+                <h2>Times:</h2>
+                <table id="times">
+                </table>
             </div>
-            <div class="pll">
-                <h3 class="stepHeading">PLL</h3>
-                <p class="body">
-                    PLL is the final stage of CFOP that has 21 different algorithms that are used to solve the rest of the cube. Similar to OLL, only one PLL algorithm is used per solve, depending on the situation.
-                </p>
-            </div>
-        </div>
+        </section>
+        <div id="overlay"></div>
+        <div id="overlayStats"></div>
     </main>
 </body>
 </html>
