changed scripts for OLL and PLL

--- a/PLL.html
+++ b/PLL.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>CFOP Trainer</title>
     <link rel="icon" href="https://i.pinimg.com/originals/e9/ea/11/e9ea1149359a3d087f5bd946372ab840.png">
-    <script defer src="F2L.js"></script>
+    <script defer src="PLL.js"></script>
 </head>
 <body>
     <section class="header">
